@@ -99,6 +99,7 @@ enum {
 	P_KODAK_605,
 	P_SHINKO_S2145,
 	P_SONY_UPDR150,
+	P_MITSU_D70X,
 	P_DNP_DS40,
 	P_DNP_DS80,
 	P_END,
@@ -146,6 +147,7 @@ extern struct dyesub_backend kodak605_backend;
 extern struct dyesub_backend kodak1400_backend;
 extern struct dyesub_backend shinkos2145_backend;
 extern struct dyesub_backend canonselphy_backend;
+extern struct dyesub_backend mitsu70x_backend;
 extern struct dyesub_backend dnpds40_backend;
 
 #endif /* __BACKEND_COMMON_H */
